<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyEventActivity">

    <TextView
        android:id="@+id/eventEndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventEndText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/eventStartTime"
        app:layout_constraintTop_toBottomOf="@+id/eventStartTime" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:onClick="onClick"
        android:text="@string/multiUseApply"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnDelete"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:onClick="onClick"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="@+id/btnShowReminders"
        app:layout_constraintTop_toBottomOf="@+id/btnShowReminders" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/titleText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hintTitle"
        android:inputType="textPersonName"
        android:autofillHints="title"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        app:layout_constraintStart_toEndOf="@+id/titleText"
        app:layout_constraintTop_toTopOf="@+id/titleText" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/descriptionText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="337dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hintDescription"
        android:inputType="textMultiLine"
        android:maxLength="96"
        android:maxLines="2"
        android:autofillHints="description"
        app:layout_constraintStart_toStartOf="@+id/descriptionText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <TextView
        android:id="@+id/eventStartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/eventStartText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editDescription"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <EditText
        android:id="@+id/eventStartTime"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/hintStartHour"
        android:inputType="time"
        android:textSize="14sp"
        android:maxLength="5"
        android:autofillHints="time"
        app:layout_constraintStart_toStartOf="@+id/eventStartText"
        app:layout_constraintTop_toBottomOf="@+id/eventStartText" />

    <EditText
        android:id="@+id/eventEndTime"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/hintEndHour"
        android:inputType="time"
        android:maxLength="5"
        android:textSize="14sp"
        android:autofillHints="time"
        app:layout_constraintStart_toStartOf="@+id/eventEndText"
        app:layout_constraintTop_toBottomOf="@+id/eventEndText" />

    <CheckBox
        android:id="@+id/isDeadlineCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkboxText"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/eventEndTime"
        app:layout_constraintTop_toBottomOf="@+id/eventEndTime" />

    <Button
        android:id="@+id/btnShowReminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/showReminders"
        app:layout_constraintStart_toStartOf="@+id/isDeadlineCheckbox"
        app:layout_constraintTop_toBottomOf="@+id/isDeadlineCheckbox" />

</androidx.constraintlayout.widget.ConstraintLayout>